# treesitter-cisco-ios-jinja2

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  Makefile  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml
bindings/c/: tree-sitter-cisco-ios-jinja2.pc.in
bindings/c/tree_sitter/: tree-sitter-cisco-ios-jinja2.h
bindings/go/: binding.go  binding_test.go  parser_hash.go
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_cisco_ios_jinja2/: __init__.py  binding.c
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/: example.cisco_ios_jinja2
test/corpus/: access-list.txt  command_line.txt  global.txt  hostname.txt  integration.txt  interface.txt  line.txt  misc.txt  negation.txt  router.txt  service.txt  service_timestamps.txt  version.txt
