[build-system]
requires = ["setuptools>=62.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-cisco-ios-jinja2"
description = "Tree sitter grammar for the Cisco IOS network Operating System"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "cisco", "ios", "jinja2"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "David Gethings", email = "dgethings@me.com" }]
requires-python = ">=3.10"
license.text = "MIT"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/dgethings/tree-sitter-cisco-ios-jinja2"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
